# lk-plugin-live-interpreter

./: .gitignore  AGENT_STATUS_GUIDE.md  API_COMPATIBILITY_FIX.md  API_COMPATIBILITY_FIX_V2.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURE_AZURE_CREDENTIALS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_FILES.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_TROUBLESHOOTING.md  DOCKER_FIX.md  Dockerfile  IMPLEMENTATION_STATUS.md  LIVEKIT_CLI_COMMANDS.md  LOCAL_TESTING.md  LOCAL_TESTING_COMPLETE.md  LOCAL_TESTING_FILES.txt  LOCAL_TESTING_SUMMARY.md  Makefile  PLAYGROUND_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REDEPLOY_INSTRUCTIONS.md  REFACTORING_COMPLETE.md  REFACTORING_FINAL.md  REFACTORING_SUMMARY.md  agent.yaml  cloud-deploy.yaml  deploy.sh  livekit.toml  requirements.txt  setup_local_dev.sh
examples/: .env.example  README.md  custom_voice_interpreter.py  multi_language_meeting.py  simple_interpreter.py  test_local.py
livekit-plugins/livekit-plugins-azure/: README.md  pyproject.toml
livekit-plugins/livekit-plugins-azure/livekit/: __init__.py
livekit-plugins/livekit-plugins-azure/livekit/plugins/azure/: __init__.py  log.py  models.py
livekit-plugins/livekit-plugins-azure/livekit/plugins/azure/realtime/: __init__.py  realtime_model.py  utils.py
tests/: test_models.py  test_utils.py
